-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: other-libs
-
b11
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8366772 | 25.0.2 | John Jiang | P4 | Resolved | Fixed | b01 |
| JDK-8367480 | 21.0.10 | John Jiang | P4 | Resolved | Fixed | b01 |
| JDK-8367479 | 17.0.18 | John Jiang | P4 | Resolved | Fixed | b01 |
| JDK-8367693 | 11.0.30 | John Jiang | P4 | Resolved | Fixed | b01 |
| JDK-8367710 | openjdk8u482 | John Jiang | P4 | Resolved | Fixed | b01 |
| JDK-8372216 | shenandoah8u482 | John Jiang | P4 | Resolved | Fixed | master |
- backported by
-
JDK-8366772 Replace THL A29 Limited with Tencent
-
- Resolved
-
-
JDK-8367479 Replace THL A29 Limited with Tencent
-
- Resolved
-
-
JDK-8367480 Replace THL A29 Limited with Tencent
-
- Resolved
-
-
JDK-8367693 Replace THL A29 Limited with Tencent
-
- Resolved
-
-
JDK-8367710 Replace THL A29 Limited with Tencent
-
- Resolved
-
-
JDK-8372216 Replace THL A29 Limited with Tencent
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk8u-dev/9a1f0c6f
-
Commit(master)
openjdk/jdk11u-dev/43b28ee9
-
Commit(master)
openjdk/jdk17u-dev/640f822a
-
Commit(master)
openjdk/jdk21u-dev/ae4ee164
-
Commit(master)
openjdk/jdk25u/e7dafa72
-
Commit(master)
openjdk/jdk/4c9eadda
-
Review(master)
openjdk/jdk8u-dev/689
-
Review(master)
openjdk/jdk11u-dev/3086
-
Review(master)
openjdk/jdk17u-dev/3882
-
Review(master)
openjdk/jdk21u-dev/2138
-
Review(master)
openjdk/jdk25u/158
-
Review(master)
openjdk/jdk/26614