8364597: Replace THL A29 Limited with Tencent

Reviewed-by: jiefu